--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/app.js"></script>
     <link rel="stylesheet" href="index.css" />
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
     <title>App</title>
   </head>
   <body>
